--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "lodash": "^4.17.4",
+    "mime": "^2.0.3",
     "morgan": "^1.9.0",
     "nunjucks": "^3.0.1"
   },
